# tkd

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  THANKS  configure  configure.in  script.in
data/: Makefile.am  Makefile.in  tkd.txt
desktop/: Makefile.am  Makefile.in  taekwon-do-theory-assistant.desktop
docs/: index.html  moreinfo.html  screenshots.html  style.css
docs/readme/: 1_2_1.html  style.css
src/: AssemblyInfo.cs  AssemblyInfo.cs.in  Dialog.cs  EndOfTestDialog.cs  Main.cs  MainWindow.cs  Makefile.am  Makefile.in  ReadTSV.cs  Test.cs  YesNoDialog.cs  loadsaveconfig.cs
